--- a/app.json
+++ b/app.json
@@ -11,6 +11,11 @@
     "pages/editAddress/main",
     "pages/editAddress/reEditAdress/main"
   ],
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  },
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
